--- a/web-app/package.json
+++ b/web-app/package.json
@@ -6,12 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "db:init": "npx prisma init",
+    "db:gen": "npx prisma generate --schema=./lib/db/prisma/schema.prisma",
+    "db:push": "npx prisma db push --schema=./lib/db/prisma/schema.prisma"
   },
   "dependencies": {
+    "@prisma/adapter-neon": "^7.3.0",
+    "@prisma/client": "^7.3.0",
+    "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "stellar-wallet-kit": "^2.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -20,7 +27,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.6",
+    "prisma": "^7.3.0",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5"
   }
 }
