--- a/web-app/package.json
+++ b/web-app/package.json
@@ -12,13 +12,17 @@
     "db:push": "npx prisma db push --schema=./lib/db/prisma/schema.prisma"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@prisma/adapter-neon": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "dotenv": "^17.2.4",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "stellar-wallet-kit": "^2.0.7"
+    "react-hook-form": "^7.71.1",
+    "stellar-wallet-kit": "^2.0.7",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -31,5 +35,6 @@
     "prisma": "^7.3.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@10.6.5+sha512.cdf928fca20832cd59ec53826492b7dc25dc524d4370b6b4adbf65803d32efaa6c1c88147c0ae4e8d579a6c9eec715757b50d4fa35eea179d868eada4ed043af"
 }
